<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/menu_bg"
    tools:context=".chatBot_GeminiAPI">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/gemini_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:contentDescription="@string/result_area" />
    </ScrollView>

    <EditText
        android:id="@+id/message_box"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/type_your_message_here"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:inputType="text"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ask_runbuddy"
        android:text="@string/ask_runbuddy"/>

    <Button
        android:id="@+id/backButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/go_back_to_main_menu"
        android:text="@string/go_back_to_main_menu"/>
</LinearLayout>

